@@ -1,5 +1,9 @@
 Changes with Apache 1.3.5
 
+  *) PORT: Switch back to using fcntl() locking on Linux -- instabilities
+     have been reported with flock() locking (probably related to kernel
+     version).  [Dean Gaudet] PR#3531
+
   *) Using APACI, the main config file (usually httpd.conf) was
      not being adjusted as $(TARGET).conf. [Wilfredo Sanchez
      <wsanchez@apple.com>]
